# rs-json2csv

./: Cargo.toml  README.md  output.csv
src/: lib.rs  main.rs
static/: input.json  output.csv
