[package]
name = "rs_json2csv"
version = "0.1.0"
edition = "2021"
authors = ["transparentt <sait00@icloud.com>"]
description = "Convert JSON to CSV in Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
csv = "1.3"

[lib]
name = "rs_json2csv"
path = "src/lib.rs"
